@@ -17,14 +17,14 @@ class Table
 
     case structured_reference
     when /\[#Headers\],\[(.*?)\]:\[(.*?)\]/io
-      column_number_start = @column_name_array.find_index($1.strip.downcase)
-      column_number_finish = @column_name_array.find_index($2.strip.downcase)
+      column_number_start = column_number_for($1)
+      column_number_finish = column_number_for($2)
       return ref_error unless column_number_start && column_number_finish
       ast_for_area @area.excel_start.offset(0,column_number_start), @area.excel_start.offset(0,column_number_finish)
 
     when /\[#Totals\],\[(.*?)\]:\[(.*?)\]/io
-      column_number_start = @column_name_array.find_index($1.strip.downcase)
-      column_number_finish = @column_name_array.find_index($2.strip.downcase)
+      column_number_start = column_number_for($1)
+      column_number_finish = column_number_for($2)
       return ref_error unless column_number_start && column_number_finish
       ast_for_area @area.excel_start.offset(@area.height,column_number_start), @area.excel_start.offset(@area.height,column_number_finish)
 
@@ -32,24 +32,24 @@ class Table
       r = Reference.for(calling_cell)
       r.calculate_excel_variables
       row = r.excel_row_number
-      column_number_start = @column_name_array.find_index($1.strip.downcase)
-      column_number_finish = @column_name_array.find_index($2.strip.downcase)
+      column_number_start = column_number_for($1)
+      column_number_finish = column_number_for($2)
       return ref_error unless column_number_start && column_number_finish
       ast_for_area @area.excel_start.offset(row - @area.excel_start.excel_row_number,column_number_start), @area.excel_start.offset(row - @area.excel_start.excel_row_number,column_number_finish)
 
     when /\[(.*?)\]:\[(.*?)\]/io
-      column_number_start = @column_name_array.find_index($1.strip.downcase)
-      column_number_finish = @column_name_array.find_index($2.strip.downcase)
+      column_number_start = column_number_for($1)
+      column_number_finish = column_number_for($2)
       return ref_error unless column_number_start && column_number_finish
       ast_for_area @area.excel_start.offset(1,column_number_start), @area.excel_start.offset(@area.height - @number_of_total_rows,column_number_finish)
 
     when /\[#Headers\],\[(.*?)\]/io
-      column_number = @column_name_array.find_index($1.strip.downcase)
+      column_number = column_number_for($1)
       return ref_error unless column_number      
       ast_for_cell @area.excel_start.offset(0,column_number)
 
     when /\[#Totals\],\[(.*?)\]/io
-      column_number = @column_name_array.find_index($1.strip.downcase)
+      column_number = column_number_for($1)
       return ref_error unless column_number
       ast_for_cell @area.excel_start.offset(@area.height,column_number)
 
@@ -57,7 +57,7 @@ class Table
       r = Reference.for(calling_cell)
       r.calculate_excel_variables
       row = r.excel_row_number
-      column_number = @column_name_array.find_index($1.strip.downcase)
+      column_number = column_number_for($1)
       return ref_error unless column_number
       ast_for_cell @area.excel_start.offset(row - @area.excel_start.excel_row_number,column_number)      
 
@@ -96,11 +96,11 @@ class Table
         r = Reference.for(calling_cell)
         r.calculate_excel_variables
         row = r.excel_row_number
-        column_number = @column_name_array.find_index(structured_reference.strip.downcase)
+        column_number = column_number_for(structured_reference)
         return ref_error unless column_number
         ast_for_cell @area.excel_start.offset(row - @area.excel_start.excel_row_number,column_number)      
       else        
-        column_number = @column_name_array.find_index(structured_reference.strip.downcase)
+        column_number = column_number_for(structured_reference)
         return ref_error unless column_number
         ast_for_area @area.excel_start.offset(1,column_number), @area.excel_start.offset(@area.height - @number_of_total_rows,column_number)
       end
@@ -117,6 +117,11 @@ class Table
   
   def ref_error
     [:error,"#REF!"]
+  end
+
+  def column_number_for(name)
+    name = name.strip.downcase.gsub("'#","#")
+    @column_name_array.find_index(name)
   end
   
   def includes?(sheet,reference)
