@@ -1,5 +1,6 @@
 # Head
 
+- Fixed a bug when a table has column names containing a # symbol
 - Can now isolate more than one worksheet at the same time
 
 # 0.2.18 - 2013 March 2nd
